--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
     font-family: sans-serif;
     background-color: #1F2937;
-    color: white;
+    color: white; 
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .header {
@@ -17,4 +19,15 @@ ul, a {
     color: #F9FAF8;
     text-decoration: none;
     font-size: 24px;
+}
+
+.intro {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: white;
 }
