--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,12 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #1F2937;
     color: white;
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 40px;
 }
 
 ul, a {
@@ -18,7 +22,10 @@ ul, a {
     list-style-type: none;
     color: #F9FAF8;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    gap: 16px;
+    margin: 0;
 }
 
 .intro {
