Add gaps between imgs and img text

--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,14 @@ ul, a {
 
 .images {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 30px;
 }
 
 .img-text {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 150px;
 }
 
 .footer {
