--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
     padding: 20px 50px 30px 50px;
 }
 
+h1, p {
+    margin: 0;
+}
+
 ul, a {
     display: flex;
     list-style-type: none;
@@ -31,6 +35,11 @@ ul, a {
     display: flex;
     justify-content: center;
     gap: 20px;
+}
+
+.intro-text {
+    max-width: 360px;
+    flex-wrap: wrap;
 }
 
 .middle {
