--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,12 @@ ul, a {
     flex: 1;
 }
 
-.info {
+.info img {
     border: solid blue;
     border-radius: 20px;
     overflow: hidden;
+    width: 200px;
+    height: auto;
 }
 
 .text {
