--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,9 @@ ul, a {
     display: flex;
     justify-content: center;
     font-size: 36px;
-    font-weight: bold;
+    font-weight: 900;
     color: #1F2937;
+    padding: 30px 0;
 }
 
 .cards {
@@ -61,6 +62,7 @@ ul, a {
     align-items: baseline;
     gap: 50px;
     flex: 1;
+    padding-bottom: 30px;
 }
 
 .info img {
