--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,14 @@ body {
     padding: 20px 50px 30px 50px;
 }
 
+button {
+    background-color: #3882F6;
+    color: white;
+    border-radius: 5px;
+    border-color: #3882F6;
+    padding: 4px 15px;
+}
+
 h1, p {
     margin: 0;
 }
