--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,14 @@ ul, a {
     justify-content: center;
 }
 
+.quote {
+    background-color: #E5E7EB;
+    font-size: 24px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+
 .footer {
     background-color: #1F2937;
     color: white;
