--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     background-color: #1F2937;
     color: white; 
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
@@ -105,4 +107,6 @@ ul, a {
 .footer {
     background-color: #1F2937;
     color: white;
+    display: flex;
+    justify-content: center;
 }
