--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,11 @@ body {
     font-family: sans-serif;
     background-color: #1F2937;
     color: white; 
+    height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .header {
