Seperate signup into seperate blocks

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,15 @@ ul, a {
     font-size: 20px;
 }
 
+.signup-block {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+}
+
+.signup-card {
+    background-color: blue;
+}
 
 .footer {
     background-color: #1F2937;
