--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@ body {
     color: white; 
     height: 100vh;
     margin: 0;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; */
 }
 
 .header {
@@ -18,6 +18,7 @@ body {
     font-weight: 700;
     font-size: 24px;
     padding: 20px 50px 30px 50px;
+    margin-bottom: 50px;
 }
 
 button {
@@ -75,7 +76,7 @@ ul, a {
     align-items: baseline;
     gap: 50px;
     flex: 1;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
 }
 
 .info img {
@@ -96,7 +97,7 @@ ul, a {
     font-size: 24px;
     font-style: italic;
     color: #1F2937;
-    padding: 50px 0;
+    padding: 80px 0;
 }
 
 .quote-text {
@@ -117,7 +118,7 @@ ul, a {
     display: flex;
     justify-content: center;
     background-color: white;
-    padding: 40px 50px;
+    padding: 50px 50px;
 }
 
 .signup-card {
@@ -136,4 +137,5 @@ ul, a {
     color: white;
     display: flex;
     justify-content: center;
+    padding: 30px;
 }
