--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ ul, a {
     justify-content: center;
     gap: 20px;
     margin-bottom: 50px;
+    flex-wrap: wrap-reverse;
 }
 
 .intro-text {
@@ -78,6 +79,7 @@ ul, a {
     gap: 50px;
     flex: 1;
     padding-bottom: 60px;
+    flex-wrap: wrap;
 }
 
 .info img {
