--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,8 @@ ul, a {
     border-radius: 20px;
     overflow: hidden;
     width: 120px;
-    height: auto;
+    height: 120px;
+    object-fit: contain;
 }
 
 .text {
